// Copyright 2021 Prysmatic Labs.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package ethereum.eth.v2;

import "proto/eth/v2/version.proto";
import "proto/eth/v1/beacon_state.proto";
import "proto/eth/v2/beacon_state.proto";

message WrappedBeaconState {
	Version version = 1001;
	bytes validatorIndexes = 1002;
	oneof state {
		v1.BeaconState phase0_state = 1;
		v2.BeaconStateV2 altair_state = 2;
	}
}

